--- a/MyVagon/UI/Base.lproj/Main.storyboard
+++ b/MyVagon/UI/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DKX-7P-83b">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -19,17 +20,17 @@
             <objects>
                 <viewController storyboardIdentifier="SplashVC" id="BYZ-38-t0r" customClass="SplashVC" customModule="MyVagon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MYVAGON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XZV-00-39L">
-                                <rect key="frame" x="207" y="448" width="0.0" height="0.0"/>
+                                <rect key="frame" x="207" y="368" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="0.0"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash_Truck_2" translatesAutoresizingMaskIntoConstraints="NO" id="AuJ-JB-2NE">
-                                <rect key="frame" x="0.0" y="748" width="414" height="145"/>
+                                <rect key="frame" x="0.0" y="588" width="414" height="145"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
@@ -59,11 +60,11 @@
             <objects>
                 <viewController storyboardIdentifier="BoardingVC" id="9q1-zn-EoK" customClass="BoardingVC" customModule="MyVagon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6CZ-13-HYm">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Cgg-I1-mNH">
-                                <rect key="frame" x="0.0" y="124" width="414" height="536"/>
+                                <rect key="frame" x="0.0" y="80" width="414" height="452"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="jDb-KA-rV2">
                                     <size key="itemSize" width="412" height="539"/>
@@ -73,7 +74,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BoardingCell" id="Kuh-b2-bDz" customClass="BoardingCell" customModule="MyVagon" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="-1.5" width="412" height="539"/>
+                                        <rect key="frame" x="0.0" y="-43.666666666666664" width="412" height="539"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ySF-wi-8nV">
                                             <rect key="frame" x="0.0" y="0.0" width="412" height="539"/>
@@ -126,7 +127,7 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9S-5w-39m">
-                                <rect key="frame" x="344" y="44" width="55" height="40"/>
+                                <rect key="frame" x="344" y="0.0" width="55" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="A63-GJ-J0p"/>
                                     <constraint firstAttribute="width" constant="55" id="tf6-sq-bhh"/>
@@ -139,7 +140,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfa-to-Fsg" customClass="themButtonNext" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="20" y="729" width="374" height="53"/>
+                                <rect key="frame" x="20" y="612.66666666666663" width="374" height="43.333333333333371"/>
                                 <color key="backgroundColor" red="0.12156862745098039" green="0.12156862745098039" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Next"/>
@@ -148,7 +149,7 @@
                                 </connections>
                             </button>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iSA-sm-j6a">
-                                <rect key="frame" x="161.5" y="832" width="91" height="10"/>
+                                <rect key="frame" x="161.33333333333334" y="706" width="91.333333333333343" height="10"/>
                                 <color key="tintColor" red="0.56862745100000001" green="0.3294117647" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="H2A-85-zIR"/>
@@ -190,11 +191,11 @@
             <objects>
                 <viewController storyboardIdentifier="SignInVC" id="hqE-Em-FK0" customClass="SignInVC" customModule="MyVagon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CXH-TO-Ag2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MYVAGON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dww-CZ-uwV">
-                                <rect key="frame" x="75" y="103" width="264" height="50"/>
+                                <rect key="frame" x="75" y="59" width="264" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="KIe-Ca-yZW"/>
                                 </constraints>
@@ -203,7 +204,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get started using MyVagon!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUH-3U-Rlc">
-                                <rect key="frame" x="101" y="165" width="212.5" height="45"/>
+                                <rect key="frame" x="101.00000000000001" y="121" width="212.33333333333337" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="GvL-o6-Kp4"/>
                                 </constraints>
@@ -215,20 +216,20 @@
                                 <rect key="frame" x="0.0" y="270" width="414" height="157"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="RyR-lB-G39">
-                                <rect key="frame" x="0.0" y="425" width="414" height="55.5"/>
+                                <rect key="frame" x="0.0" y="381" width="414" height="45.666666666666686"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFH-ca-d0Q">
-                                        <rect key="frame" x="0.0" y="0.0" width="207" height="55.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="45.666666666666664"/>
                                         <state key="normal" title="Freelancer"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="auT-ml-hU8">
-                                        <rect key="frame" x="207" y="0.0" width="207" height="55.5"/>
+                                        <rect key="frame" x="207" y="0.0" width="207" height="45.666666666666664"/>
                                         <state key="normal" title="Company"/>
                                     </button>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="d14-fS-pow">
-                                <rect key="frame" x="0.0" y="540.5" width="414" height="180"/>
+                                <rect key="frame" x="0.0" y="486.66666666666674" width="414" height="180"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NuD-ql-6cj">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
@@ -248,7 +249,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lVm-51-qbN">
-                                        <rect key="frame" x="0.0" y="115" width="414" height="65"/>
+                                        <rect key="frame" x="0.0" y="114.99999999999994" width="414" height="65"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N00-4s-DUz">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
@@ -270,13 +271,13 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yiy-7I-zbO" customClass="themButtonNext" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="20" y="757" width="374" height="53"/>
+                                <rect key="frame" x="20" y="703" width="374" height="43.333333333333371"/>
                                 <color key="backgroundColor" red="0.1215686275" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="SIgn In"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNR-Gv-hu1" customClass="themButtonNext" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="154" y="832" width="106" height="32"/>
+                                <rect key="frame" x="154" y="768.33333333333337" width="106" height="32"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <state key="normal" title="Join For Free!">
                                     <color key="titleColor" red="0.56862745100000001" green="0.3294117647" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -328,7 +329,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DKX-7P-83b" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="9hb-7a-L7d">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -342,9 +343,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Signin_icon" width="414" height="156"/>
-        <image name="Splash_Truck_2" width="404.5" height="145"/>
-        <image name="Truck_1" width="414.5" height="156"/>
+        <image name="Signin_icon" width="413.66665649414062" height="156"/>
+        <image name="Splash_Truck_2" width="404.33334350585938" height="145"/>
+        <image name="Truck_1" width="414.33334350585938" height="156"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
