- validation messages and set new validation for login and register - InProgress - validation for splash screen - done - Resend OTP API - done

--- a/MyVagon/UI/Auth.storyboard
+++ b/MyVagon/UI/Auth.storyboard
@@ -306,7 +306,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XVE-hX-OYL" customClass="themeTextfield" customModule="MyVagon" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="335" height="52"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="image" keyPath="LeftImage" value="ic_user"/>
                                                         </userDefinedRuntimeAttributes>
@@ -364,7 +364,7 @@
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mobile Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g5Y-8d-JPj" customClass="themeTextfield" customModule="MyVagon" customModuleProvider="target">
                                                                 <rect key="frame" x="101" y="0.0" width="149" height="54"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="ASCIICapableNumberPad"/>
                                                             </textField>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E8W-7R-Gp2" customClass="ThemeButtonVerify" customModule="MyVagon" customModuleProvider="target">
                                                                 <rect key="frame" x="255" y="0.0" width="80" height="54"/>
@@ -1362,7 +1362,7 @@
                                                                                             <constraint firstAttribute="height" constant="52" id="08h-JE-FKI"/>
                                                                                         </constraints>
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                                                        <textInputTraits key="textInputTraits"/>
+                                                                                        <textInputTraits key="textInputTraits" keyboardType="ASCIICapableNumberPad"/>
                                                                                     </textField>
                                                                                 </subviews>
                                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1410,7 +1410,7 @@
                                                                                             <constraint firstAttribute="height" constant="52" id="cNb-2d-7yL"/>
                                                                                         </constraints>
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                                                        <textInputTraits key="textInputTraits"/>
+                                                                                        <textInputTraits key="textInputTraits" keyboardType="ASCIICapableNumberPad"/>
                                                                                     </textField>
                                                                                 </subviews>
                                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -2048,7 +2048,7 @@
                                                                             <constraint firstAttribute="height" constant="50" id="yKi-Qz-bdG"/>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                        <textInputTraits key="textInputTraits"/>
+                                                                        <textInputTraits key="textInputTraits" keyboardType="ASCIICapableNumberPad"/>
                                                                     </textField>
                                                                 </subviews>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
