--- a/MyVagon/UI/Popup.storyboard
+++ b/MyVagon/UI/Popup.storyboard
@@ -112,7 +112,7 @@
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="IsBlack" value="YES"/>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="BtnVerifyAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="a1E-Ba-H1Q"/>
+                                                            <action selector="BtnResendOTP:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="cDz-sb-M0O"/>
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="atp-V3-Okh">
